<resources>
    <string name="app_name">VidaSaude</string>
    <string name="especialidade">Alergista</string>
    <string name="agendamento"></string>
    <string name="nomemedico">Diogo teste</string>
    <string name="crm">0000000</string>
    <string name="labelnome">Nome</string>
    <string name="nome">Digite o nome</string>
    <string name="labeltelefone">Telefone</string>
    <string name="telefone">Digite o telefone</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="botaodata">Escolher Data</string>
    <string name="botaohora">Escolher hora</string>
    <string name="botaoconsulta">Solicitar Consulta</string>
</resources>
